@@ -1,0 +1,23 @@
+#ifndef CompareOptions_h_included
+#define CompareOptions_h_included
+
+/**
+ * @brief Whether to ignore whitespace (or to ignore changes in whitespace)
+ *
+ * Examples:
+ * "abc def" is only equivalent to "abcdef" under WHITESPACE_IGNORE_ALL
+ *
+ * but "abc def" is equivalent to "abc    def" under both 
+ *   WHITESPACE_IGNORE_CHANGE and WHITESPACE_IGNORE_ALL
+ *
+ * Also, trailing and leading whitespace is ignored for both
+ *   WHITESPACE_IGNORE_CHANGE and WHITESPACE_IGNORE_ALL
+ */
+enum
+{
+	WHITESPACE_COMPARE_ALL = 0,    /**< no special handling of whitespace */
+	WHITESPACE_IGNORE_CHANGE,      /**< ignore changes in whitespace */
+	WHITESPACE_IGNORE_ALL          /**< ignore whitespace altogether */
+};
+
+#endif // CompareOptions_h_included
